--- a/rayank.yml
+++ b/rayank.yml
@@ -4,6 +4,12 @@
   become: yes  # This is used to run tasks with elevated privileges
 
   tasks:
+    - name: Create an empty file
+      file:
+        path: /home/ubuntu/file.txt
+        state: touch
+   
+        
     - name: List details using ls command
       command: ls -l /home/ubuntu
       register: ls_output
